--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^6.1.1",
+    "@types/react-burger-menu": "^2.8.7",
     "classnames": "^2.5.1",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "microcms-js-sdk": "^3.1.0",
     "next": "14.2.13",
     "react": "^18",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "zod": "^3.23.8"
