--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
